--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -2,6 +2,10 @@
 title: // TODO(HiDeoo)
 ---
 
+// TODO(HiDeoo) code component
+
+## Astro
+
 ```diff auto-diff title=".gitignore"
 # build output
 dist/
@@ -169,4 +173,64 @@ const { greeting = 'Hello', name } = Astro.props
 ---
 
 <h2>{greeting}, {name}!</h2>
+```
+
+## Starlight
+
+```js auto-diff
+// astro.config.mjs
+import { defineConfig } from 'astro/config'
+import starlight from '@astrojs/starlight'
+
+export default defineConfig({
+  integrations: [
+    starlight({
+      title: 'Docs With Custom CSS',
+      customCss: [],
+    }),
+  ],
+})
+```
+
+```js auto-diff
+// astro.config.mjs
+import { defineConfig } from 'astro/config'
+import starlight from '@astrojs/starlight'
+
+export default defineConfig({
+  integrations: [
+    starlight({
+      title: 'Docs With Custom CSS',
+      customCss: [
+        // Relative path to your custom CSS file
+        './src/styles/custom.css',
+      ],
+    }),
+  ],
+})
+```
+
+// TODO(HiDeoo) extra highlighting `docs/src/content/docs/guides/i18n.mdx`
+
+```js auto-diff
+// src/content.config.ts
+import { defineCollection } from 'astro:content'
+import { docsLoader } from '@astrojs/starlight/loaders'
+import { docsSchema } from '@astrojs/starlight/schema'
+
+export const collections = {
+  docs: defineCollection({ loader: docsLoader(), schema: docsSchema() }),
+}
+```
+
+```js auto-diff
+// src/content.config.ts
+import { defineCollection } from 'astro:content'
+import { docsLoader, i18nLoader } from '@astrojs/starlight/loaders'
+import { docsSchema, i18nSchema } from '@astrojs/starlight/schema'
+
+export const collections = {
+  docs: defineCollection({ loader: docsLoader(), schema: docsSchema() }),
+  i18n: defineCollection({ loader: i18nLoader(), schema: i18nSchema() }),
+}
 ```
