--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -1,9 +1,9 @@
 ---
 title: Getting Started
-description: // TODO(HiDeoo)
+description: Learn how to use the remark-auto-diff plugin in your project.
 ---
 
-A [remark](https://remark.js.org/) plugin providing an alternative syntax to author `diff` code blocks in Markdown syntax.
+A [remark](https://remark.js.org/) plugin providing an alternative syntax to author `diff` code blocks in Markdown.
 
 To learn more about some of the drawbacks of classic `diff` code blocks and how `remark-auto-diff` tries to solve them, check out the [“Why a new syntax?” page](/why/).
 
@@ -37,7 +37,7 @@ import { PackageManagers } from '@hideoo/starlight-plugins-docs-components'
        starlight({
          title: 'My Docs',
        }),
-     ]
+     ],
      markdown: {
        remarkPlugins: [remarkAutoDiff],
      },
